# ESN-Pulse

./: .env.example  .gitignore  PRD.MD  README.md  batch_processor.py  data_processor.py  docker-compose.yml  er-diagram.md  esn_scraper.py  main.py  pyproject.toml  requirements.txt  run_scraper.py
data/: esn_data.json  esn_data.json.backup  esn_data.json.backup2
database/init/: 01_create_database.sql
database/schemas/: 01_core_tables.sql  02_statistics_tables.sql  03_monitoring_tables.sql
docker/: Dockerfile
docs/: ARCHITECTURE.md  DATASET_SPECIFICATIONS.md  HLD.MD  METHODOLOGY.md  PRD.MD  README.MD  TECHNICAL_STACK.md  er-diagram.md  schema.md
scripts/: clean_esn_data.py  manuel_update.py  update_esn_ids.py
src/: __init__.py
src/analysis/: trends.py
src/cli/: __init__.py  database_commands.py  main.py  scraper_commands.py  test_data.py
src/config/: __init__.py  settings.py
src/database/: __init__.py  config.py  connection.py  database_utils.py  db_operations.py  db_setup.py  operations.py
src/models/: __init__.py  activity.py  country.py  lookup_models.py  section.py  section_statistics.py
src/scrapers/: __init__.py  accounts_scraper.py  activities_statistics_scraper.py  base_scraper.py
src/scrapers/constants/: __init__.py  account_selectors.py  activity_selectors.py  country_mappings.py
src/scrapers/extractors/: __init__.py  activity_extractor.py  country_extractor.py  section_extractor.py  statistics_extractor.py
src/scrapers/parsers/: __init__.py  activity_parser.py  country_parser.py  section_parser.py  statistics_parser.py
src/scrapers/validators/: __init__.py  account_validator.py  data_validator.py
src/scraping/: activities_scraper.py  organisations_scraper.py  statistics_scraper.py
src/scraping/utils/: extraction_utils.py  request_handler.py
src/tasks/: __init__.py  accounts_tasks.py  activities_chunk_task.py  activities_tasks.py  celery_app.py
src/utils/: __init__.py  date_parser.py  exceptions.py  http_client.py  slug_generator.py
tests/: activity_scraper_results.py  get_sections_names.py  test_db.py  verify_esn_data.py  visualize_data.py
